--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_native_splash: ^2.1.6
   font_awesome_flutter: ^10.1.0
   modal_bottom_sheet: ^2.0.1
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
