--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   modal_bottom_sheet: ^2.0.1
   http: ^0.13.4
+  test: ^1.19.5
+  timeago: ^3.2.2
+  expandable_text: ^2.3.0
 
 dev_dependencies:
   flutter_test:
