--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   timeago: ^3.2.2
   expandable_text: ^2.3.0
   fluttertoast: ^8.0.9
+  shared_preferences: ^2.0.15
 
 
 dev_dependencies:
