--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   expandable_text: ^2.3.0
   fluttertoast: ^8.0.9
   shared_preferences: ^2.0.15
+  flutter_rating_bar: ^4.0.1
 
 
 dev_dependencies:
